# samidare-python-analysis

./: README.md  pyproject.toml
prm/minitpc-samidare-test-at-ribf-2025-07/: minitpc.map
src/samidare-lib/analysis/: pyspark_check_conector_map.py
src/samidare-lib/decoder/: binary_dumper_version3.py
src/samidare-lib/junk/: pyspark_pulse_analysis.py
src/samidare-util/analysis/: pyspark_noise_check.py
src/samidare-util/decoder/: pyspark_pulse_finder.py
src/samidare-util/develop/: chk_samidare_root.py  chk_timestamp.py
src/samidare-util/junk/: pyspark_analysis_test.py  pyspark_event_build.py  samidare_decorder_test_64packet.py  test.py
src/samidare_lib/: __init__.py
src/samidare_lib/analysis/: __init__.py  pyspark_check_conector_map.py  pyspark_function_generator.py  pyspark_hit_pattern.py  pyspark_noise_check.py  pyspark_pedestal_check.py  pyspark_pulse_check.py  savefig_util.py
src/samidare_lib/decoder/: __init__.py  binary_dumper.py  binary_dumper_version3.py  pyspark_check_raw_pulse.py  pyspark_event_builder.py  pyspark_pulse_analysis_version2.py  pyspark_pulse_finder.py
src/samidare_lib/detector/: __init__.py  padinfo.py
src/samidare_lib/develop/: check_parquet.py  chk_module.py  chk_samidare_root.py  get_pininfo_fromXML.py  rin_hist.py
src/samidare_lib/junk/: pyspark_analysis_test.py  pyspark_hit_pattern.py  samidare_decorder_test.py  test.py
src/samidare_python_analysis/decoder/: pyspark_event_builder_version2.py  samidare_decorder_version2.py
src/samidare_util/: __init__.py
src/samidare_util/analysis/: pyspark_check_conector_map.py  pyspark_function_generator.py  pyspark_hit_pattern.py  pyspark_panquet_check.py  pyspark_pedestal_check.py  pyspark_pulse_check.py  savefig_util.py
src/samidare_util/decoder/: binary_dumper.py  binary_dumper_version2.py  binary_dumper_version3.py  pyspark_check_raw_pulse.py  (+4 more)
(+1 files in other folders)
