[project]
name = "samidare_util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FumiHubCNS", email = "fendo@cns.s.u-tokyo.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "awkward>=2.8.5",
    "awkward-pandas>=2023.8.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "uproot>=5.6.3",
    "catmlib",
    "pyarrow>=21.0.0",
    "pyspark>=4.0.0",
    "click>=8.2.1",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/samidare_util"]

[tool.uv.sources]
catmlib = { git = "https://github.com/FumiHubCNS/catm-python-lib.git", rev = "main"}
