[project]
name = "samidare-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FumiHubCNS", email = "fendo@cns.s.u-tokyo.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "awkward>=2.8.5",
    "awkward-pandas>=2023.8.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyarrow>=21.0.0",
    "pyspark>=4.0.0",
    "click>=8.2.1",
    "toml>=0.10.2",
    "kaleido>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "catm-lib",
    "json5>=0.12.1",
    "jupyterlab>=4.4.10",
    "jupyterlab-lsp>=5.2.0",
    "marimo>=0.17.6",
    "marimo-lib",
    "python-lsp-server[all]>=1.13.1",
    "uproot>=5.6.8",
]

[tool.marimo.runtime]
output_max_bytes = 100_000_000

[tool.uv.sources]
marimo-lib = { git = "https://github.com/FumiHubCNS/marimo-lib" }
catm-lib = { git = "https://github.com/FumiHubCNS/catm-lib" }
